--- a/work with teacher/css/style.css
+++ b/work with teacher/css/style.css
@@ -9,6 +9,7 @@ html {
 
 .flex {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 
 .container {
 	margin: 0 auto;
-	max-width: 500px;
+	max-width: 200px;
 }
 
 .main-title {
