--- a/game-cards/style.css
+++ b/game-cards/style.css
@@ -11,7 +11,6 @@ html {
 .page {
   min-width: 1200px;
   font-family: 'Montserrat';
-
 }
 
 .button-reload {
@@ -33,6 +32,11 @@ html {
 }
 
 .container-opacity {
+  opacity: 0.4;
+  pointer-events:none;
+}
+
+.body-opacity {
   opacity: 0.4;
   pointer-events:none;
 }
@@ -62,8 +66,8 @@ html {
   opacity: 0;
 }
 
-.card-disabled {
-  pointer-events:none ;
+.card-block {
+  pointer-events:none;
 }
 
 .input {
@@ -73,16 +77,11 @@ html {
   width: 115px;
 }
 
-.card {
+.main-block {
   display: grid;
   grid-row-gap: 10px;
   justify-items: center;
-  opacity: 0;
   transition: opacity 1s ease-in-out;
-}
-
-.card-opacity {
-  opacity: 1;
 }
 
 .form__button {
@@ -101,18 +100,46 @@ html {
   margin-right: 20px;
 }
 
-.cards {
+.card {
   width: 200px;
   height: 200px;
-  border-radius: 15px;
+  position: relative;
+  perspective: 1000px;
+  font-size: 0;
+}
+
+.card-front-buff{
+  transform: rotateY(180deg);
+}
+
+.block-card-ever {
+  pointer-events:none;
+}
+
+.card-back-buff{
+  transform: rotateY(360deg) !important;
+}
+
+.card-front, .card-back{
+  position: absolute;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backface-visibility: hidden;
+  transition: transform .6s ease-in-out;
+}
+
+.card-back {
+  transform: rotateY(180deg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: gray;
-  color: gray;
-  font-size: 0;
-  transition: transform 0.6s ease-in-out;
-  transform: rotateY(180deg);
+}
+
+.card-front {
+  background: linear-gradient(27deg, rgba(131,58,180,1) 13%, rgba(253,29,29,1) 62%, rgba(252,176,69,1) 100%);
 }
 
 .form {
