--- a/my-work/student-table/css/style.css
+++ b/my-work/student-table/css/style.css
@@ -16,10 +16,47 @@ img {
 	max-width: 100%;
 }
 
+
+
+button {
+  height: 42px;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  font-size: 20px;
+  transition: transform .2s linear;
+  cursor: pointer;
+  background-color: tomato;
+}
+
+input {
+  font-size: 24px;
+}
+
+button:hover {
+  transform: scale(1.14);
+}
+
+button:active {
+  transform: scale(1);
+  transition: transform .08s linear;
+}
+
+.table-button {
+  width: 190px;
+}
+
+input {
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+}
+
 .container {
-	padding: 0 50px;
+	padding: 30px 50px;
 	margin: 0 auto;
 	max-width: 1400px;
+  border-radius: 25px;
 	background: #7b7b7b;
 }
 
@@ -28,23 +65,24 @@ img {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin-bottom: 30px;
+}
+
+label {
+  font-size: 25px;
 }
 
 .input {
 	margin-bottom: 15px;
 }
 
-.form-button {
-	margin-bottom: 10px;
-}
 
 .table {
-	margin: 0 auto
+	margin: 0 auto;
+  padding-top: 30px;
 }
 
 .form-button {
-	margin: 0 auto
+	margin: 20px auto;
 }
 
 .form__blok {
@@ -61,3 +99,37 @@ img {
 	text-align: center;
 }
 
+.main-block {
+  align-items: baseline;
+  width: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.search-block-input {
+  display: flex;
+  flex-direction: column;
+  width: 271px;
+  margin-bottom: 20px;
+  margin-right: 15px;
+}
+
+.search-title {
+  margin-right: 115px;
+  font-size: 35px;
+  font-weight: 200;
+  font-style: oblique;
+  letter-spacing: 4px;
+}
+
+.search-block-start {
+  margin-left: 425px;
+}
+
+.search-input:focus::placeholder {
+  color: white;
+}
+
+.table__item {
+  font-size: 22px;
+}
